2002-02-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Deliver.py: Run mta.stop() from tmda-rfilter instead of from
	every delivery method.

	* Util.py (sendmail): Add quotes around both the sender and
	recipient when calling sendmail from the shell.

2002-02-25  Tim Legant  <tim@catseye.net>

	* Defaults.py: Documented additional options for ACTION_OUTGOING.

2002-02-25  Tim Legant  <webmaster@catseye.net>

	* FilterParser.py (FilterParser): Fixed in_action regexp to allow
	the 'ok' and 'accept' actions to accept options just like
	'deliver'.

2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Deliver.py: New module to handle local mail delivery.

2002-02-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

        * Util.py (pipecmd): New function that runs child processes with
        error checking.

        (sendmail): New function to send e-mail with the sendmail program.
                
        * MTA.py (MTA.deliver): Use Util.pipecmd() to deliver the
        message.  Also raise an exception rather than sys.exit(75) upon
        error.
                
        * Errors.py: Add DeliveryError for delivery module related errors.
        
        * Defaults.py: Remove SENDMAIL path checking; Util.sendmail() will
        catch any such errors.

2002-02-22  Tim Legant  <tim@catseye.net>

	* Util.py (build_dbm): Fixed bug; DBM was renamed to current
	directory instead of respecting the path.

	* FilterParser.py (FilterParser.firstmatch): If no rule is found,
	return an empty dictionary instead of None.

	* FilterParser.py (FilterParser.__autobuild_db): New function.

	(FilterParser.firstmatch): Factored above function out of
	'from-/to-file' clause to clean up code.
	
	* FilterParser.py (FilterParser.firstmatch): Made autodbm
	functionality use a surrogate file to determine whether the DBM is
	up to date.  This is because of the varied naming of DBM files
	across platforms.  It was suggested by Matt Armstrong.
