@@ -1,3 +1,12 @@
+2002-02-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Util.py (pipecmd): Include getmail copyright for borrowed GPL
+	code.
+
+	(wraptext): Include Mailman copyright for borrowed GPL code.
+
+	(maketext): Ditto.
+
 2002-02-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Deliver.py: Run mta.stop() from tmda-rfilter instead of from
